--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h2>About</h2>
+<h2>About AviiRP</h2>
 <p>
 	AviiRP is a discord bot that transforms a channel into a role playing experience.
 </p>
@@ -27,6 +27,7 @@
 <li>Type <code>!help</code> for an up to date list of allowed commands</li>
 <li>(Optional) Create a role that has <code>Manage Messages</code> for Game Masters to control <code>!story</code> and <code>!gm</code></li>
 <li>(Optional) Deny the bot access to any other channel than the channel you want to play in</li>
+<li>(Optional) Change the nickname of the bot in your server to something that makes sense for your story (for example, Storyteller)</li>
 </ol>
 
 <h2>Getting Started</h2>
