--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <b>AdminCommands</b><br>
 !clear - Clears the channel log<br>
 !gm &lt;text&gt; - A message from a GM<br>
-!whois &lt;descriminator&gt; - Find out who someone really is
+!whois &lt;discriminator&gt; - Find out who someone really is
 </p>
 <p>
 <b>HelpModule</b><br>
