--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <li><a href="https://discordapp.com/api/oauth2/authorize?client_id=438250098619580416&permissions=125968&scope=bot" target="_BLANK">Add to server</a></li>
 <li>Type <code>!story enable</code> in the channel you wish to activate the bot</li>
 <li>Type <code>!help</code> for an up to date list of allowed commands</li>
+<li>Give the bot <code>Manage Channel</code> permission in the channel(s) of your story to be able to update the channel topic</li>
 <li>(Optional) Create a role that has <code>Manage Messages</code> for Game Masters to control <code>!story</code> and <code>!gm</code></li>
 <li>(Optional) Deny the bot access to any other channel than the channel you want to play in</li>
 <li>(Optional) Change the nickname of the bot in your server to something that makes sense for your story (for example, Storyteller)</li>
