--- a/sample.html
+++ b/sample.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Elitist Scrub Kingdom - rp_</title>
+<title>AviiRP Sample usage</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <style>body {
@@ -149,17 +149,6 @@ span.mention {
 }</style>
 </head>
 <body>
-<div id="info">
-<div class="info-left">
-<img class="guild-icon" src="https://cdn.discordapp.com/icons/135445851848835072/51ff3d7f0e0a9535b188006e8c28731a.png" />
-</div>
-<div class="info-right">
-<div class="guild-name">Elitist Scrub Kingdom</div>
-<div class="channel-name">rp_</div>
-<div class="channel-topic">**The Brilliant**</div>
-<div class="channel-messagecount">14 messages</div>
-</div>
-</div>
 <div id="log">
 <div class="msg">
 <div class="msg-left">
