--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
 <h2>Getting Started</h2>
 <p>
-	When the bot has been enabled using <code>!story enable</code> you can supply the story with information using the other <code>!story</code> commands. You can set a title, summary, color, image and icon for the base story to set the mood. When you are finished setting all the parameters you can apply the changes to the story using <code>!story update</code>. Optionally you can add properties to the story using <code>!story property set &lt;key&gt; &lt;value&gt;</code>. For example to set a location for the story. <code>!story property set Location Downtown</code>
+	When the bot has been enabled using <code>!story enable</code> you can supply the story with information using the other <code>!story</code> commands. You can set a title, summary, color, image and icon for the base story to set the mood. When you are finished setting all the parameters you can apply the changes to the story using <code>!story update</code>. Optionally you can add properties to the story using <code>!story property set &lt;key&gt; &lt;value&gt;</code>. For example to set a location for the story. <code>!story property set Location Downtown</code><br>
+	An example story can be found <a href="https://aviinl.github.io/aviirp/sample.html" target="_BLANK">here</a>.
 </p>
 
 <h2>Commands</h2>
