--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 <h2>Commands</h2>
 
 <p>
+<b>RuleCommands</b><br>
+!rules - Get a pm with the rules and guidelines that go with the story<br>
+</p>
+<p>
+<b>rule</b><br>
+!rule add &lt;text&gt; - Add a new rule<br>
+!rule remove &lt;text&gt; - Remove a rule (supply the beginning of the rule)<br>
+</p>
+<p>
 <b>ActionCommands</b><br>
 !roll [dice=1d20] - Roll dice<br>
 </p>
@@ -47,7 +56,7 @@
 <b>AdminCommands</b><br>
 !clear - Clears the channel log<br>
 !gm &lt;text&gt; - A message from a GM<br>
-!whois &lt;discriminator&gt; - Find out who someone really is
+!whois &lt;discriminator&gt; - Find out who someone really is<br>
 </p>
 <p>
 <b>HelpModule</b><br>
