--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
 </p>
 <p>
 <b>PlayerCommands</b><br>
-!name &lt;firstname&gt; &lt;lastname&gt; - Give your character a first and last name<br>
+!name &lt;firstname&gt; [lastname=] - Give your character a name with an optional last name<br>
 !perma [notify=False] - Delete your character<br>
 !me &lt;text&gt; - Perform an action.<br>
 !showid - Show your ID.<br>
 !ooc &lt;text&gt; - Speak out of character<br>
+!fix - Removes your last message<br>
 </p>
 <p>
 <b>story</b><br>
