--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <b>story</b><br>
 !story enable - Enable the bot in the current channel<br>
 !story disable - Disable the bot in the current channel<br>
+!story link &lt;ChannelID&gt; - Link a channels database<br>
 !story title &lt;value&gt; - Change the title<br>
 !story summary &lt;value&gt; - Update the summary<br>
 !story color &lt;value&gt; - Change the color<br>
