Added new commands

--- a/index.html
+++ b/index.html
@@ -63,10 +63,17 @@
 !help - Show list of commands<br>
 </p>
 <p>
+<b>CharacterCommands</b><br>
+!switch &lt;name&gt; - Switch to a different character (partial name allowed)<br>
+!characters - Get a list of all your characters<br>
+</p>
+<p>
 <b>PlayerCommands</b><br>
-!name &lt;firstname&gt; [lastname=] - Give your character a name with an optional last name<br>
+!title &lt;title&gt; - Sets a title for your character.<br>
+!name &lt;firstname&gt; [lastname=] - Create a new character with a name with an optional last name<br>
 !perma [notify=False] - Delete your character<br>
 !me &lt;text&gt; - Perform an action.<br>
+!rp &lt;text&gt; - Perform an action without prepending name.<br>
 !showid - Show your ID.<br>
 !ooc &lt;text&gt; - Speak out of character<br>
 !fix - Removes your last message<br>
@@ -75,7 +82,7 @@
 <b>story</b><br>
 !story enable - Enable the bot in the current channel<br>
 !story disable - Disable the bot in the current channel<br>
-!story link &lt;ChannelID&gt; - Link a channels database<br>
+!story link &lt;ChannelID&gt; - Link a channels character database<br>
 !story title &lt;value&gt; - Change the title<br>
 !story summary &lt;value&gt; - Update the summary<br>
 !story color &lt;value&gt; - Change the color<br>
