--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	AviiRP is a discord bot that transforms a channel into a role playing experience.
 </p>
 <p>
-	Everyone starts out as "Unknown" until they identify themselves with <code>!name &lt;firstname&gt; &lt;lastname&gt;</code>. Every message that is not a command will be removed and replaced by the bot with your first name or Unknown. You can also perform actions using <code>!me &lt;action&gt;</code> which will be replaced by <b><i>FirstName|Unknown [action]</i></b>, note the lack of a colon character. A Game Master (GM) (person with <code>Manage Messages</code> permission) can use <code>!gm &lt;text&gt;</code> to supply the story with context, this is an italic message with no name.
+	Everyone starts out as "Unknown" until they create their first character with <code>!name &lt;firstname&gt; &lt;lastname&gt;</code>. Every message that is not a command will be removed and replaced by the bot with your first name or Unknown. You can also perform actions using <code>!me &lt;action&gt;</code> which will be replaced by <b><i>FirstName|Unknown [action]</i></b>, note the lack of a colon character. or you can use <code>!rp &lt;action&gt;</code> to add narrative, this is an italic message with no name.<br>
+	Text wrapped in doublequotes are interepreted as spoken within an <code>!me</code> or <code>!rp</code> command.
 </p>
 
 <h2>Install</h2>
