--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 !clear - Clears the channel log<br>
 !gm &lt;text&gt; - A message from a GM<br>
 !whois &lt;discriminator&gt; - Find out who someone really is<br>
+!exp &lt;Name&gt; &lt;Amount&gt; - Give a character experience points
+!gold &lt;Name&gt; &lt;Amount&gt; - Give a character gold
 </p>
 <p>
 <b>HelpModule</b><br>
@@ -78,6 +80,8 @@
 !showid - Show your ID.<br>
 !ooc &lt;text&gt; - Speak out of character<br>
 !fix - Removes your last message<br>
+!balance - Check how much gold your current character has
+!pay &lt;Amount&gt; [item=] - Pay a sum of gold
 </p>
 <p>
 <b>story</b><br>
